# textrecognition2

./: CMakeLists.txt  Read Me  parameters.par
src/: Array.cc  Array.hh  CMakeLists.txt  Debug.cc  Debug.hh  Dictionary.cc  Dictionary.hh  FileReader.cc  FileReader.hh  TextRecognition.cc  TextRecognition.hh  Types.hh  main.cc
tests/: CMakeLists.txt  debug.cc  dicttest.cc  frestest.cc
